Для ускорения сайта я сделал связь с базой через хранимые процедуры, ну и ещё хранение картинок не в байтах а стринговой строкой название картинки, а картинки хранятся в отдельной папке на сервере, скорость заметно улучшилось.

--- a/EnglishWebSimulatorApp/appsettings.json
+++ b/EnglishWebSimulatorApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EnglishWebSimulatorAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EnglishWebSimulatorApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "EnglishWebSimulatorAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=EnglishWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
